# tinktest

./: BUILD  WORKSPACE  deps.bzl  go.mod  go.sum
src/: BUILD.bazel  test.go
