load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["test.go"],
    importpath = "github.com/efagerho/tinktest/src",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_tink//go/keyset:go_default_library"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
